# semantic-cache-chatbot

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup_dev.sh
chatbot/: __init__.py  cli.py  config.py
chatbot/cache/: base.py  manager.py  pgvector_store.py  pinecone_store.py  qdrant_store.py  vector_store.py
chatbot/providers/: anthropic.py  base.py  openai.py
tests/: test_cache_manager.py
